--- a/main_app/templates/main_app/crew_list.html
+++ b/main_app/templates/main_app/crew_list.html
@@ -1,3 +1,13 @@
 {% extends 'base.html' %} {% block content %}
 <h1>Crew List</h1>
-{% endblock %}
+
+{% for crew in crew_list %}
+<a href="{% url 'crews_detail' crew.id %}">
+	<div class="card">
+		<div class="card-content">
+			<span class="card-title">{{ crew.name }}</span>
+			<p>Start: {{ crew.start_date }}</p>
+		</div>
+	</div>
+</a>
+{% endfor %} {% endblock %}
